--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin:'application'
 apply plugin: 'com.github.ben-manes.versions'
 
 description = 'Force Based Layout'
 group = 'ch.frostnova'
 version = '1.0.0-SNAPSHOT'
+
+mainClassName = "ch.frostnova.force.based.layout.TestApp"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
